Bot_Telegram_Basico.ipynb

--- a/Bot_Telegram_Basico.ipynb
+++ b/Bot_Telegram_Basico.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3e3509dc",
+   "id": "560a41eb",
    "metadata": {},
    "source": [
     "#### Bot básico para Telegram com pyTelegramBotAPI\n",
@@ -14,30 +14,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "7545516f",
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "id": "f00fa468",
+   "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_6772/4177371685.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Familia\\AppData\\Local\\Temp/ipykernel_6772/4177371685.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    pip install pyTelegramBotAPI\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pyTelegramBotAPI in c:\\python27-18\\lib\\site-packages (4.5.1)\n",
+      "Requirement already satisfied: requests in c:\\python27-18\\lib\\site-packages (from pyTelegramBotAPI) (2.26.0)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2; python_version < \"3\" in c:\\python27-18\\lib\\site-packages (from requests->pyTelegramBotAPI) (4.0.0)\n",
+      "Requirement already satisfied: idna<3,>=2.5; python_version < \"3\" in c:\\python27-18\\lib\\site-packages (from requests->pyTelegramBotAPI) (2.10)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\python27-18\\lib\\site-packages (from requests->pyTelegramBotAPI) (1.26.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\python27-18\\lib\\site-packages (from requests->pyTelegramBotAPI) (2021.10.8)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEPRECATION: Python 2.7 reached the end of its life on January 1st, 2020. Please upgrade your Python as Python 2.7 is no longer maintained. pip 21.0 will drop support for Python 2.7 in January 2021. More details about Python 2 support in pip can be found at https://pip.pypa.io/en/latest/development/release-process/#python-2-support pip 21.0 will remove support for this functionality.\n"
      ]
     }
    ],
    "source": [
     "#Instalação da biblioteca\n",
-    "pip install pyTelegramBotAPI"
+    "!pip install pyTelegramBotAPI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "fa4eb081",
+   "execution_count": 12,
+   "id": "86338f53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73165d7d",
+   "id": "06e85d58",
    "metadata": {},
    "source": [
     "### Criar Token Telegram\n",
@@ -63,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3a23b725",
+   "execution_count": 13,
+   "id": "30935363",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,8 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d6d85956",
+   "execution_count": 14,
+   "id": "b0b3c03f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dbbdc73",
+   "id": "a0aed6fd",
    "metadata": {},
    "source": [
     "#### Mensagem padrão para quando o Bot iniciar"
@@ -94,8 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "adc9cfde",
+   "execution_count": 15,
+   "id": "89b78aeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,38 +117,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6f543627",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_6772/3689698758.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Familia\\AppData\\Local\\Temp/ipykernel_6772/3689698758.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    if message.text == \"oi\" #Cliente diz\u001b[0m\n\u001b[1;37m                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "execution_count": 19,
+   "id": "c33ea3ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Coletor de mensagens recebidas no bot\n",
+    "def Todas_as_mensagens(msg):\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ffc6f856",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "@bot.message_handler(func=Todas_as_mensagens)\n",
     "def handle_text_doc(message):\n",
-    "    if message.text == \"oi\" #Cliente diz\n",
+    "    if message.text == \"oi\": #Cliente diz\n",
     "        bot.reply_to(message,\"Em que posso ajudar?\")#Bot Responde\n",
-    "    if message.text == \"Olá\" #Cliente diz\n",
+    "    if message.text == \"Olá\": #Cliente diz\n",
     "        bot.reply_to(message,\"Seja bem vindo(a)\")#Bot Responde\n",
-    "    if message.text == \"Oie\" # Cliente diz\n",
+    "    if message.text == \"Oie\": # Cliente diz\n",
     "        bot.reply_to(message,\"Saudações\")#Bot Responde\n",
-    "    if message.text == \"iae\" # Cliente diz\n",
+    "    if message.text == \"iae\": # Cliente diz\n",
     "        bot.reply_to(message,\"Blz, posso ajudar?\") #Bot Responde\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9dfedc8f",
+   "id": "803fa7ac",
    "metadata": {
     "collapsed": true
    },
@@ -404,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7b27b97",
+   "id": "60e6e7d1",
    "metadata": {},
    "source": [
     "#### [Manifesto para Desenvolvimento Ágil de Software](https://agilemanifesto.org/iso/ptbr/manifesto.html)\n",
