--- a/Bot_Telegram_Basico.ipynb
+++ b/Bot_Telegram_Basico.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "560a41eb",
+   "id": "89713159",
    "metadata": {},
    "source": [
     "#### Bot básico para Telegram com pyTelegramBotAPI\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f00fa468",
+   "id": "55175e28",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "86338f53",
+   "id": "7afb3ad8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06e85d58",
+   "id": "8580f2d8",
    "metadata": {},
    "source": [
     "### Criar Token Telegram\n",
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "30935363",
+   "id": "d1a351bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b0b3c03f",
+   "id": "6c8cf3d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0aed6fd",
+   "id": "6658b3d2",
    "metadata": {},
    "source": [
     "#### Mensagem padrão para quando o Bot iniciar"
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "89b78aeb",
+   "id": "025d1c9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c33ea3ef",
+   "id": "cb0c09ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ffc6f856",
+   "id": "08ad22ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "803fa7ac",
+   "id": "9eb25112",
    "metadata": {
     "collapsed": true
    },
@@ -409,12 +409,13 @@
    ],
    "source": [
     "# Este é o fechamento do código, com ele seu código responderá infinitamente ao Bot\n",
-    "bot.infinity_polling()"
+    "\n",
+    "# bot.infinity_polling()  #Este comando está como comentário para não executar automaticamente."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "60e6e7d1",
+   "id": "03771688",
    "metadata": {},
    "source": [
     "#### [Manifesto para Desenvolvimento Ágil de Software](https://agilemanifesto.org/iso/ptbr/manifesto.html)\n",
